<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="highlight_stabilo">Highlight</string>
    <string name="menuDonasi">Donation</string>
    <string name="menuSupport">Support</string>
    <string name="mengimpor_titiktiga">Restoring…</string>
    <string name="mengekspor_titiktiga">Creating backup…</string>
    <string name="bagikan_renungan">Share devotion</string>
    <string name="renungan_sudah_disalin">Devotion has been copied.</string>
    <string name="salin_renungan">Copy devotion</string>
    <string name="ekspor_berhasil_file_yang_dihasilkan_file">Backup was successful.\n\nResults are in file: %s</string>
    <string name="impor_berhasil_angka_diproses">Restore was successful. In total %1$d bookmarks, notes, and/or highlights, and also %2$d labels were processed.</string>
    <string name="terjadi_kesalahan_ketika_mengekspor_pesan">There were error(s) when creating backup: %s</string>
    <string name="terjadi_kesalahan_ketika_mengimpor_pesan">There were error(s) when restoring: %s</string>
    <string name="apakah_anda_mau_menumpuk_pembatas_buku_dan_catatan_tanya">Overwrite the bookmarks, notes, and highlights you currently have?</string>
    <string name="file_tidak_bisa_dibaca_file">The file does not exist or could not be read: %s</string>
    <string name="impor_dari_sd_card">Restore</string>
    <string name="ekspor_ke_sd_card">Backup</string>
    <string name="menuBantuan">Help</string>
    <string name="beri_saran_title">Suggest</string>
    <string name="menuDevotion">Devotion</string>
    <string name="search">Search</string>
    <string name="activity_title_markers">Markers</string>
    <string name="menu_markers">Markers</string>
    <string name="hapus_pembatas_buku">Delete bookmark</string>
    <string name="menuShare">Share</string>
    <string name="menuShareSplit0">Share primary version</string>
    <string name="menuShareSplit1">Share secondary version</string>
    <string name="menuShareBothSplits">Share both versions</string>
    <string name="tulis_catatan">Note</string>
    <string name="tambah_pembatas_buku">Bookmark</string>
    <string name="salin_ayat">Copy verse</string>
    <string name="copy_split0">Copy primary version</string>
    <string name="copy_split1">Copy secondary version</string>
    <string name="copy_both_splits">Copy both versions</string>
    <string name="search_copy_selected_verses">Copy selected verses</string>
    <string name="perj_baru">New Test.</string>
    <string name="perj_lama">Old Test.</string>
    <string name="search_bookname_only">%s only</string>
    <string name="ayat_sebelumangka">Verse</string>
    <string name="pasal_sebelumangka">Chapter</string>
    <string name="jump_to_prompt"><b>JUMP TO</b> — Example: ^1</string>
    <string name="belum_ada_pembatas_buku">No bookmarks yet.\nSelect a verse to add a bookmark.</string>
    <string name="judul_titikdua">TITLE</string>
    <string name="devotion_downloader_downloading_title">Downloading ^1</string>
    <string name="devotion_downloader_downloading_date">dated ^1</string>
    <string name="devotion_downloader_error_date">Error in date ^1: ^2</string>
    <string name="devotion_downloader_success_date">Downloaded date ^1</string>
    <string name="belum_tersedia_mungkin_tanggal_yang_diminta_belum_disiapkan">Not yet available. Probably the requested date\'s material is not prepared yet, or there are some errors in recognizing the data source. Please try again later.</string>
    <string name="belum_tersedia_menunggu_pengambilan_data_lewat_internet_pastikan_ada">Not yet available. Fetching from the Internet…\n\n(Ensure there is Internet connection to fetch the devotion materials.)</string>
    <string name="hari_sabtu">Sat</string>
    <string name="hari_jumat">Fri</string>
    <string name="hari_kamis">Thu</string>
    <string name="hari_rabu">Wed</string>
    <string name="hari_selasa">Tue</string>
    <string name="hari_senin">Mon</string>
    <string name="hari_minggu">Sun</string>
    <string name="size_hasil">%d results</string>
    <string name="search_searching_tokens">Searching for verses containing %s…</string>
    <string name="pilih_setidaknya_satu_kitab">Choose at least one book to search.</string>
    <string name="pengunduhan_dibatalkan">Download canceled.</string>
    <string name="sedang_mendekompres_harap_tunggu">Decompressing. Please wait…</string>
    <string name="terunduh_sampe_byte">Downloaded: %d bytes</string>
    <string name="gagal_mengunduh_edisi_judul_ex_pastikan_internet">Failed in downloading version: %1$s (%2$s).\nMake sure that Internet is working correctly.</string>
    <string name="version_download_complete">Downloaded <b>^1</b></string>
    <string name="mulai_mengunduh">Starting download…</string>
    <string name="mengunduh_nama">Downloading %s</string>
    <string name="tuju_v">Go to</string>
    <string name="bagikan_alamat">Share %s</string>
    <string name="search_selected_verse_copied">The selected verses have been copied.</string>
    <string name="alamat_sudah_disalin">%s has been copied.</string>
    <string name="alamat_tidak_sah_alamat">Invalid address: %s</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="anda_yakin_mau_menghapus_catatan_ini">Delete this note?</string>
    <string name="hapus_catatan">Delete note</string>
    <string name="catatan_alamat">Note on %s</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="tidak_bisa_membuat_folder">Could not create folder %s</string>
    <string name="menuPengaturan">Settings</string>
    <string name="menuTentang">About</string>
    <string name="pengaturan_alkitab">Bible Settings</string>
    <string name="kelola_versi">Manage Versions</string>
    <string name="tambah">Add</string>
    <string name="versi_lainnya">Other versions</string>
    <string name="version_error_opening">Error opening %s.</string>
    <string name="pdb_file_options">PDB file options</string>
    <string name="greek_charset">Greek charset</string>
    <string name="hebrew_charset">Hebrew charset</string>
    <string name="pdb_encoding">PDB encoding</string>
    <string name="sample_text">Sample text</string>
    <string name="include_book_and_chapter_headers">Include book and chapter headers</string>
    <string name="select_all">Select all</string>
    <string name="cp_opening_pdb_file">Opening PDB file</string>
    <string name="cp_loading_version_info">Loading version info</string>
    <string name="cp_loading_word_index">Loading word index</string>
    <string name="cp_analyzing_available_books">Analyzing available books</string>
    <string name="cp_mapping_books">Mapping books</string>
    <string name="cp_constructing_book_info">Constructing book info</string>
    <string name="cp_constructing_version_info">Constructing version info</string>
    <string name="cp_writing_num_section_pericope_titles">Writing %s section/pericope titles</string>
    <string name="cp_writing_translated_file">Writing translated file</string>
    <string name="cp_reading_book_info">Reading book info: %s</string>
    <string name="cp_writing_text_of_book_chapters">Writing text of book %1$s (%2$s chapters)</string>
    <string name="ed_type_key">Type</string>
    <string name="ed_type_internal">Built-in</string>
    <string name="ed_type_preset">Downloadable</string>
    <string name="ed_type_db">Downloaded</string>
    <string name="ed_locale_locale">Language code</string>
    <string name="ed_shortName_shortName">Short name</string>
    <string name="ed_title_title">Title</string>
    <string name="ed_stored_in_file">File location</string>
    <string name="ed_default_filename_file">Preset name</string>
    <string name="ed_download_url_url">Download URL</string>
    <string name="ed_version_details">Version details</string>
    <string name="ed_choose_pdb_or_yes_file">Choose a .pdb or .yes file</string>
    <string name="ed_invalid_file_selected">Invalid file selected.</string>
    <string name="ed_file_file_sudah_ada_dalam_daftar_versi">File %s is already on the list.</string>
    <string name="ed_error_encountered">Error encountered</string>
    <string name="ed_this_file_is_already_on_the_list">This file is already on the list.</string>
    <string name="ed_reading_pdb_file">Reading PDB file…</string>
    <string name="ed_finished">Finished.</string>
    <string name="menuSort">Sort</string>
    <string name="menuSortCreateTime">Created date</string>
    <string name="menuSortModifyTime">Edited date</string>
    <string name="menuSortAri">Verse address</string>
    <string name="menuSortCaption">Title</string>
	<string name="bl_selection_copy">Copy</string>
	<string name="bl_selection_edit">Edit</string>
	<string name="bl_selection_delete">Delete</string>
    <string name="menuAddSomething">Add marker</string>
    <string name="menuDisplay">Display</string>
    <string name="bookmark_search">Search</string>
    <string name="menuSongs">Songs</string>
    <string name="sn_delete_song_book">Delete song book</string>
    <string name="sn_update_book">Update song book</string>
    <string name="desc_close">Close</string>
    <string name="desc_progress_1">First pin</string>
    <string name="desc_progress_2">Second pin</string>
    <string name="desc_progress_3">Third pin</string>
    <string name="desc_progress_4">Fourth pin</string>
    <string name="desc_progress_5">Fifth pin</string>
    <string name="desc_progress_mark_list">List of pins</string>
    <string name="menuFullScreen">Full screen</string>
    <string name="copy_share">Copy or share</string>
    <string name="rp_menuReadingPlan">Reading plan</string>
    <string name="menuNightMode">Night mode</string>
    <string name="menu_compare">Compare</string>
    <string name="menuSplitVersion">Split</string>
    <string name="menuBible">Bible</string>
    <string name="menuProgress">Pins</string>
    <string name="sn_menu_copy">Copy song</string>
    <string name="menuPlay">Play</string>
    <string name="left_drawer_current_reading_title">Current reading</string>
    <string name="book_filter_old_testament">Old Testament</string>
    <string name="book_filter_old_pentateuch">Pentateuch</string>
    <string name="book_filter_old_history">History</string>
    <string name="book_filter_old_wisdom">Wisdom</string>
    <string name="book_filter_old_major_prophets">Major Prophets</string>
    <string name="book_filter_old_minor_prophets">Minor Prophets</string>
    <string name="book_filter_new_testament">New Testament</string>
    <string name="book_filter_new_gospels">Gospels</string>
    <string name="book_filter_new_acts">Apostolic History</string>
    <string name="book_filter_new_pauline_epistles">Pauline Epistles</string>
    <string name="book_filter_new_general_epistles">General Epistles</string>
    <string name="book_filter_new_apocalypse">Apocalypse</string>
	<string name="sync_login_change_password_button">Change password</string>
	<string name="sync_login_form_password_hint">Password</string>
	<string name="sync_login_form_new_password_hint">New password</string>
	<string name="sync_login_form_intro_text">Sync protects your markers and other data.\n<a href='https://alkitab.app/guide/sync'>More information</a></string>
	<string name="sync_login_form_email_hint">Email</string>
	<string name="sync_login_form_forgot_button">Forgot?</string>
	<string name="sync_login_form_register_button">Register</string>
	<string name="sync_login_form_login_button">Login</string>
	<string name="sync_login_form_privacy_text">By pressing any of the buttons below, you agree to the <a href='https://alkitab.app/privacy_policy'>privacy policy</a>.</string>
</resources>