<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<item
		android:id="@+id/menuSearch"
		android:icon="@drawable/ic_menu_search"
		android:title="@string/bookmark_search"
		app:actionViewClass="android.widget.SearchView"
		app:showAsAction="always" />
	<item
		android:id="@+id/menuSort"
		android:icon="@drawable/ic_menu_sort"
		android:title="@string/menuSort"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction">
		<menu>
			<group
				android:id="@+id/groupSort"
				android:checkableBehavior="single">
				<item
					android:id="@+id/menuSortAri"
					android:title="@string/menuSortAri" />
				<item
					android:id="@+id/menuSortCaption"
					android:title="@string/menuSortCaption" />
				<item
					android:id="@+id/menuSortCreateTime"
					android:title="@string/menuSortCreateTime" />
				<item
					android:id="@+id/menuSortModifyTime"
					android:title="@string/menuSortModifyTime" />
			</group>
		</menu>
	</item>

</menu>