<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_weight="0"
	android:useDefaultMargins="true"
	tools:showIn="@layout/activity_search_book_filter">

	<CheckBox
		android:id="@+id/cOldTestament"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_marginLeft="0dp"
		android:layout_row="0"
		android:text="@string/book_filter_old_testament"
		android:textStyle="bold" />

	<CheckBox
		android:id="@+id/cOldPentateuch"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_marginLeft="16dp"
		android:layout_row="1"
		android:text="@string/book_filter_old_pentateuch" />

	<CheckBox
		android:id="@+id/cOldHistory"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_marginLeft="16dp"
		android:layout_row="2"
		android:text="@string/book_filter_old_history" />

	<CheckBox
		android:id="@+id/cOldWisdom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_marginLeft="16dp"
		android:layout_row="3"
		android:text="@string/book_filter_old_wisdom" />

	<CheckBox
		android:id="@+id/cOldMajorProphets"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_marginLeft="16dp"
		android:layout_row="4"
		android:text="@string/book_filter_old_major_prophets" />

	<CheckBox
		android:id="@+id/cOldMinorProphets"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_marginLeft="16dp"
		android:layout_row="5"
		android:text="@string/book_filter_old_minor_prophets" />

	<CheckBox
		android:id="@+id/cNewTestament"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="1"
		android:layout_marginLeft="0dp"
		android:layout_row="0"
		android:text="@string/book_filter_new_testament"
		android:textStyle="bold" />

	<CheckBox
		android:id="@+id/cNewGospels"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="1"
		android:layout_marginLeft="16dp"
		android:layout_row="1"
		android:text="@string/book_filter_new_gospels" />

	<CheckBox
		android:id="@+id/cNewActs"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="1"
		android:layout_marginLeft="16dp"
		android:layout_row="2"
		android:text="@string/book_filter_new_acts" />

	<CheckBox
		android:id="@+id/cNewPaulineEpistles"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="1"
		android:layout_marginLeft="16dp"
		android:layout_row="3"
		android:text="@string/book_filter_new_pauline_epistles" />

	<CheckBox
		android:id="@+id/cNewGeneralEpistles"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="1"
		android:layout_marginLeft="16dp"
		android:layout_row="4"
		android:text="@string/book_filter_new_general_epistles" />

	<CheckBox
		android:id="@+id/cNewApocalypse"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_column="1"
		android:layout_marginLeft="16dp"
		android:layout_row="5"
		android:text="@string/book_filter_new_apocalypse" />

</GridLayout>