<?xml version="1.0" encoding="utf-8"?>
<view android:id="@+id/left_drawer"
	class="yuku.alkitab.base.widget.LeftDrawer$Text"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="@dimen/left_drawer_width"
	android:layout_height="match_parent"
	android:layout_gravity="start"
	android:background="#263238"
	android:elevation="4dp"
	tools:ignore="Overdraw">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true"
		android:orientation="vertical">

		<include
			layout="@layout/left_drawer_header"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<Button
			android:id="@+id/bMarkers"
			style="?buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="16dp"
			android:drawableStart="@drawable/ic_drawer_markers"
			android:fontFamily="sans-serif-regular"
			android:gravity="start|center_vertical"
			android:text="@string/menu_markers"
			android:textAllCaps="false"
			android:textColor="#fff"
			android:textSize="16sp" />

		<View
			android:id="@+id/dividerCurrentReading"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="#33ffffff" />

		<FrameLayout
			android:id="@+id/panelCurrentReadingHeader"
			android:layout_width="match_parent"
			android:layout_height="32dp"
			android:layout_marginTop="8dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start|center_vertical"
				android:layout_marginStart="16dp"
				android:text="@string/left_drawer_current_reading_title"
				android:textColor="#bebebe"
				android:textSize="14sp" />

			<ImageButton
				android:id="@+id/bCurrentReadingClose"
				android:layout_width="48dp"
				android:layout_height="match_parent"
				android:layout_gravity="end"
				android:background="?selectableItemBackgroundBorderless"
				android:contentDescription="@string/desc_close"
				android:gravity="center"
				android:minWidth="48dp"
				android:src="@drawable/ic_action_remove" />

		</FrameLayout>

		<LinearLayout
			android:id="@+id/panelCurrentReadingRows"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" />

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="#33ffffff" />

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="32dp"
			android:layout_marginTop="8dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start|center_vertical"
				android:layout_marginStart="16dp"
				android:text="@string/menuProgress"
				android:textColor="#bebebe"
				android:textSize="14sp" />

			<ImageButton
				android:id="@+id/bProgressMarkList"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_gravity="end"
				android:background="?selectableItemBackgroundBorderless"
				android:contentDescription="@string/desc_progress_mark_list"
				android:gravity="center"
				android:minWidth="48dp"
				android:src="@drawable/ic_progress_mark_list" />

		</FrameLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<ImageButton
				android:id="@+id/bProgress1"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_weight="1"
				android:background="?selectableItemBackgroundBorderless"
				android:contentDescription="@string/desc_progress_1"
				android:src="@drawable/ic_attr_progress_mark_1" />

			<ImageButton
				android:id="@+id/bProgress2"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_weight="1"
				android:background="?selectableItemBackgroundBorderless"
				android:contentDescription="@string/desc_progress_2"
				android:src="@drawable/ic_attr_progress_mark_2" />

			<ImageButton
				android:id="@+id/bProgress3"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_weight="1"
				android:background="?selectableItemBackgroundBorderless"
				android:contentDescription="@string/desc_progress_3"
				android:src="@drawable/ic_attr_progress_mark_3" />

			<ImageButton
				android:id="@+id/bProgress4"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_weight="1"
				android:background="?selectableItemBackgroundBorderless"
				android:contentDescription="@string/desc_progress_4"
				android:src="@drawable/ic_attr_progress_mark_4" />

			<ImageButton
				android:id="@+id/bProgress5"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_weight="1"
				android:background="?selectableItemBackgroundBorderless"
				android:contentDescription="@string/desc_progress_5"
				android:src="@drawable/ic_attr_progress_mark_5" />

		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="#33ffffff" />

		<Button
			android:id="@+id/bDisplay"
			style="?buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="16dp"
			android:drawableStart="@drawable/ic_drawer_display"
			android:fontFamily="sans-serif-regular"
			android:gravity="start|center_vertical"
			android:text="@string/menuDisplay"
			android:textAllCaps="false"
			android:textColor="#fff"
			android:textSize="16sp" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/cFullScreen"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginEnd="0dp"
			android:layout_marginStart="16dp"
			android:fontFamily="sans-serif-regular"
			android:gravity="start|center_vertical"
			android:text="@string/menuFullScreen"
			android:textColor="#fff"
			android:textSize="16sp" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/cNightMode"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginEnd="0dp"
			android:layout_marginStart="16dp"
			android:fontFamily="sans-serif-regular"
			android:gravity="start|center_vertical"
			android:text="@string/menuNightMode"
			android:textColor="#fff"
			android:textSize="16sp" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/cSplitVersion"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginEnd="0dp"
			android:layout_marginStart="16dp"
			android:fontFamily="sans-serif-regular"
			android:gravity="start|center_vertical"
			android:text="@string/menuSplitVersion"
			android:textColor="#fff"
			android:textSize="16sp" />

		<include
			layout="@layout/left_drawer_footer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</LinearLayout>

</view>
