<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?actionBarSize"
		android:background="@color/primary" />

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:clipToPadding="false"
		android:paddingBottom="@dimen/padding_medium"
		android:paddingTop="@dimen/padding_medium">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/padding_medium"
			android:layout_marginEnd="@dimen/padding_medium"
			android:animateLayoutChanges="true"
			android:orientation="vertical">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:adjustViewBounds="true"
				android:paddingStart="@dimen/padding_large"
				android:paddingEnd="@dimen/padding_large"
				android:scaleType="fitStart"
				android:src="@drawable/sync_intro"
				tools:ignore="ContentDescription" />

			<TextView
				android:id="@+id/tIntro"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="@dimen/padding_medium"
				android:gravity="center_horizontal"
				android:text="@string/sync_login_form_intro_text"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="#fff" />

			<EditText
				android:id="@+id/tEmail"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_marginTop="@dimen/padding_large"
				android:hint="@string/sync_login_form_email_hint"
				android:inputType="textEmailAddress" />

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="48dp">

				<EditText
					android:id="@+id/tPassword"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:fontFamily="sans-serif"
					android:hint="@string/sync_login_form_password_hint"
					android:inputType="textPassword" />

				<Button
					android:id="@+id/bForgot"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_gravity="end"
					android:background="@null"
					android:focusable="false"
					android:paddingStart="@dimen/padding_medium"
					android:paddingEnd="@dimen/padding_medium"
					android:text="@string/sync_login_form_forgot_button"
					android:textAppearance="?android:textAppearanceSmall" />

			</FrameLayout>

			<EditText
				android:id="@+id/tPasswordNew"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:fontFamily="sans-serif"
				android:hint="@string/sync_login_form_new_password_hint"
				android:inputType="textPassword"
				android:visibility="gone" />

			<TextView
				android:id="@+id/tPrivacy"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/sync_login_form_privacy_text"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:orientation="horizontal">

				<Button
					android:id="@+id/bRegister"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/sync_login_form_register_button" />

				<Button
					android:id="@+id/bLogin"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_weight="1"
					android:text="@string/sync_login_form_login_button" />

				<Button
					android:id="@+id/bChangePassword"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/sync_login_change_password_button"
					android:visibility="gone" />
			</LinearLayout>
		</LinearLayout>

	</androidx.core.widget.NestedScrollView>
</LinearLayout>