<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="8dp">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/pdb_encoding" />

	<Spinner
		android:id="@+id/cbEncoding"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sample_text" />

	<TextView
		android:id="@+id/lSample"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="6dp"
		android:textAppearance="?android:attr/textAppearanceMedium"
		tools:text="In the beginning God created heaven and earth" />

	<CheckBox
		android:id="@+id/cAddlTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/include_book_and_chapter_headers" />

</LinearLayout>